# dir_tree_view

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  TASK.md  dir_filter_model.cpp  dir_filter_model.h  dir_tree_model.cpp  dir_tree_model.h  dir_tree_view.cpp  dir_tree_view.h  main.cpp  mainwindow.cpp  mainwindow.h
debian/: changelog  control  copyright  dir-view-test-docs.docs  dir-view-test.1  dir-view-test.md  install
debian/patches/: dir_tree_view.patch  series
debian/upstream/: metadata.ex
